unpackaged/main/default/objects/OpportunityApprovalSettings__mdt/OpportunityApprovalSettings__mdt.object-meta.xml
<CustomObject>
    <label>Opportunity Approval Setting</label>
    <pluralLabel>OpportunityApprovalSettings</pluralLabel>
</CustomObject>