unpackaged/main/default/objects/OpportunityApprovalSettings__mdt/fields/DefaultRecordOwner__c.field-meta.xml
<CustomField>
    <fullName>DefaultRecordOwner__c</fullName>
    <label>DefaultRecordOwner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>