unpackaged/main/default/objects/OpportunityApprovalSettings__mdt/fields/FinanceApproverCount__c.field-meta.xml
<CustomField>
    <fullName>FinanceApproverCount__c</fullName>
    <label>FinanceApproverCount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>