unpackaged/main/default/objects/OpportunityApprovalSettings__mdt/fields/LineItemRecordType__c.field-meta.xml
<CustomField>
    <fullName>LineItemRecordType__c</fullName>
    <label>LineItemRecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>