unpackaged/main/default/objects/OpportunityApprovalSettings__mdt/fields/ManagerApproverCount__c.field-meta.xml
<CustomField>
    <fullName>ManagerApproverCount__c</fullName>
    <label>ManagerApproverCount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>