unpackaged/main/default/objects/OpportunityApprovalSettings__mdt/fields/TierName__c.field-meta.xml
<CustomField>
    <fullName>TierName__c</fullName>
    <label>TierName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>