unpackaged/main/default/objects/OpportunityApprovalSettings__mdt/fields/UnitPriceMin__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceMin__c</fullName>
    <description>The minimum Company Offer Amount to activate this Tier.</description>
    <inlineHelpText>The minimum Company Offer Amount to activate this Tier.</inlineHelpText>
    <label>UnitPriceMin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>