unpackaged/main/default/objects/OpportunityApprovalSettings__mdt/listViews/AllApprovalSettings.listView-meta.xml
<ListView>
    <fullName>AllApprovalSettings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>TierName__c</columns>
    <columns>DefaultRecordOwner__c</columns>
    <columns>UnitPriceMin__c</columns>
    <columns>FinanceApproverCount__c</columns>
    <columns>ManagerApproverCount__c</columns>
    <columns>LineItemRecordType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Approval Settings</label>
    <language>en_US</language>
</ListView>